--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: sigv4
 description: Library for signing AWS requests with Signature Version 4
 author: arnemolland <arneolaim@gmail.com>
+homepage: https://github.com/arnemolland/sigv4
 
-version: 0.0.1
+version: 1.0.0
 
 environment:
   sdk: '>=2.0.0 <3.0.0'
