--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,16 @@ description: Library for signing AWS requests with Signature Version 4
 author: arnemolland <arneolaim@gmail.com>
 homepage: https://github.com/arnemolland/sigv4
 
-version: 1.0.0
+version: 2.0.0
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: ">=2.0.0 <3.0.0"
 
 dependencies:
   crypto: ^2.0.6
+  http: ^0.12.0+2
+
+dev_dependencies:
+  pedantic: ^1.8.0+1
+  test: ^1.9.4
+  mockito: ^4.1.1
