--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,17 @@ description: Library for signing AWS requests with Signature Version 4, with bot
 author: arnemolland <arneolaim@gmail.com>
 homepage: https://github.com/arnemolland/sigv4
 
-version: 2.1.0+2
+version: 3.0.0
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   crypto: ^2.1.3
   http: ^0.12.0+2
   convert: ^2.1.1
+  dio: ^3.0.7
+  chopper: ^3.0.1+1
 
 dev_dependencies:
   pedantic: ^1.8.0+1
