--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: sigv4
 description: Library for signing AWS requests with Signature Version 4, with both convenience wrappers/classes and cryptography methods
 homepage: https://github.com/arnemolland/sigv4
 
-version: 3.1.2
+version: 4.0.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -19,3 +19,5 @@ dev_dependencies:
   pedantic: ^1.8.0+1
   test: ^1.9.4
   mockito: ^4.1.1
+  dotenv: ^2.0.0
+  path: ^1.6.4
