--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,22 @@ name: sigv4
 description: Library for signing AWS requests with Signature Version 4, with both convenience wrappers/classes and cryptography methods
 homepage: https://github.com/arnemolland/sigv4
 
-version: 4.0.0+1
+version: 4.1.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  crypto: ^2.1.4
-  http: ^0.12.0+2
+  crypto: ^2.1.5
+  http: ^0.12.1
   convert: ^2.1.1
-  dio: ^3.0.8
-  chopper: ^3.0.1+1
+  dio: ^3.0.9
+  chopper: ^3.0.2
   meta: ^1.1.8
 
 dev_dependencies:
-  pedantic: ^1.8.0+1
-  test: ^1.9.4
+  pedantic: ^1.9.0
+  test: ^1.14.6
   mockito: ^4.1.1
   dotenv: ^2.0.0
-  path: ^1.6.4
+  path: ^1.7.0
