--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Dart CI
+name: Test
 
 on: [push]
 
@@ -14,5 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install dependencies
       run: pub get
+    - name: Analyze
+      run: dart analyze
     - name: Run tests
-      run: pub run test
+      run: dart test
