--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,21 @@ name: sigv4
 description: Library for signing AWS requests with Signature Version 4, with both convenience wrappers/classes and cryptography methods
 homepage: https://github.com/arnemolland/sigv4
 
-version: 4.1.2
+version: 5.0.0-nullsafety.0
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  crypto: ^2.1.5
-  http: ^0.12.1
-  convert: ^2.1.1
-  dio: ^3.0.9
-  chopper: ^3.0.2
+  crypto: ^3.0.0
+  http: ^0.13.1
+  convert: ^3.0.0
+  dio: ^4.0.0-prev3
   meta: ^1.1.8
 
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.6
-  mockito: ^4.1.1
-  dotenv: ^2.0.0
+  mockito: ^5.0.2
+  dotenv: ^3.0.0-nullsafety.0
   path: ^1.7.0
