Correct failing tests after switching to null-safety.  Switching Mockito to use generated stubs.  Modifying one client_test method to generate an actual class, not a stub.  Modifying CI workflow to analyze only library code since there will now be missing references in the client_test.dart file.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,9 +14,9 @@ jobs:
     - name: Install dependencies
       run: pub get
     - name: Analyze
-      run: dart analyze
+      run: dart analyze lib
     - name: Run tests
-      run: dart test
+      run: dart run build_runner build && dart test
     - name: Setup credentials
       if: github.ref == 'refs/heads/master'
       run: |
