--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   crypto: ^3.0.1
   http: ^0.13.3
   convert: ^3.0.0
-  dio: ^4.0.0-prev3
+  dio: ^4.0.0
 
 dev_dependencies:
   pedantic: ^1.11.0
