Modifying the Github action script to only execute when the push branch is either `master` or `null-safety`.  This change corrects an issue where the pre-release branch `null-safety` didn't build and deploy to the Dart pub dev.  Also bumps build number.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,10 @@
 name: Build & Deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+      - 'null-safety'
 
 jobs:
   ci:
@@ -18,7 +22,6 @@ jobs:
     - name: Run tests
       run: dart run build_runner build && dart test
     - name: Setup credentials
-      if: github.ref == 'refs/heads/master'
       run: |
         mkdir -p ~/.pub-cache 
         cat <<EOF > ~/.pub-cache/credentials.json
@@ -31,6 +34,5 @@ jobs:
         }
         EOF
     - name: Publish packages
-      if: github.ref == 'refs/heads/master'
       continue-on-error: true
       run: pub publish -f
