--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,18 +1,12 @@
 name: Build & Deploy
 
-on:
-  push:
-    branches:
-      - master
-      - 'null-safety'
+on: [push]
 
 jobs:
   ci:
     runs-on: ubuntu-latest
-
     container:
       image:  google/dart:latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Install dependencies
@@ -20,7 +14,7 @@ jobs:
     - name: Analyze
       run: dart analyze lib
     - name: Run tests
-      run: dart run build_runner build && dart test
+      run: dart test
     - name: Setup credentials
       run: |
         mkdir -p ~/.pub-cache 
